crates/aven-check/tests/fixtures/check/valid/comptime-merge-overwrite.av
A = { id: Text, v: Int }
B = { v: Text }
merge = (a, b) => { ..a, :..b }
Both = merge(A, B)
x : Both = { id: "a", v: "hi" }
