crates/aven-check/tests/fixtures/check/invalid/qualified-operator-signature-mismatch.av
StrangeOrder = {
  <(Self): Int
  ..
}

less = (left: t, right: t): Int
  t: StrangeOrder
=>
  0

invalid: Int = less(1, 2)
